--- a/extension/options.css
+++ b/extension/options.css
@@ -1,3 +1,8 @@
+body {
+  color: #000;
+  background-color: #fff;
+}
+
 table {
   border: 1px solid #777;
   border-collapse: collapse;
@@ -15,5 +20,24 @@ table td {
 }
 
 tr:hover {
-  background-color: rgba(0, 0, 0, .1);
+  background-color: rgba(127, 127, 127, .2);
+}
+
+a {
+  text-decoration: none;
+  color: #008;
+}
+
+a:hover {
+  text-decoration: underline
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    color: #ccc;
+    background-color: #333;
+  }
+  a {
+    color: #88f;
+  }
 }
